# creditrust-ai-complaints

./: .env  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
charts/: values.yaml
charts/templates/: deployment.yaml
data/embeddings/: complaint_embeddings.faiss  creditrust_faiss_index.index  creditrust_faiss_index.metadata.parquet
data/processed/: processed_complaints.parquet  processed_complaints_100k.csv
data/report/: top_0.1_percent_complaints.csv
docs/: api_reference.md  architecture.md
exports/: session_export_20250709_023023.json  session_export_20250709_025438.json  session_export_20250709_202746.json
notebooks/: eda.ipynb  evaluation.ipynb
scripts/: deploy_model.py  preprocessor.py  setup_db.py
src/api/: config.py  dependencies.py  main.py
src/api/routers/: analysis.py  sessions.py
src/app/: interface.py
src/config/: logging.yaml  model_config.yaml
src/core/: data_pipeline.py  rag_data_connector.py  rag_engine.py  retrieval.py
src/models/: embedding_service.py  llm_service.py  memory_efficient_embedder.py
src/services/: analytics.py  chunker.py  embedding_service.py  vector_store.py
src/utils/: analytics.py  cache.py  config.py  config_loader.py  logger.py
static/css/: styles.css
templates/api/: docs.html
templates/components/: footer.html  navbar.html
templates/errors/: 404.html
templates/pages/: dashboard.html  index.html
