[tool.poetry]
name = "creditrust-ai-complaints"
version = "0.1.0"
description = "AI-powered complaint analysis system for CrediTrust Financial"
authors = ["Teferi Mamo <your.email@example.com>"]
packages = [
    { include = "src", from = "." }
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.0"
uvicorn = "^0.22.0"
pydantic = "^2.0.0"
sentence-transformers = "^2.2.2"
pandas = "^2.0.2"
numpy = "^1.24.3"
openai = "^1.93.0"
redis = "^4.5.5"
chromadb = "^0.4.10"
tqdm = "^4.65.0"
python-dotenv = "^1.0.0"
plotly = "^5.15.0"
loguru = "^0.7.0"
torchvision = {version = "^0.22.1", platform = "cpu"}
torchaudio = {version = "^2.7.1", platform = "cpu"}
torch = {version = "^2.7.1", platform = "cpu"}
gradio = "^5.36.2"
transformers = "^4.53.1"
tomlkit = "0.12.0"
ruff = "0.12.2"
matplotlib = "^3.10.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
jupyter = "^1.0.0"
ipython = "^8.12.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"